--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.3.6",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.2.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
