--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.3.6",
-    "framer-motion": "^11.2.5",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "framer-motion": "^11.2.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
-    "next": "13.4.7",
+    "next": "^14.2.3",
     "nodemailer": "^6.9.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -32,16 +32,16 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/nodemailer": "^6.4.8"
+    "typescript": "^5"
   }
 }
