--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URL = mongodb+srv://aaronkthai:EM9qJEbQlIXPzu2Q@cluster0.fe8cbi9.mongodb.net/
+MONGO_URL = mongodb+srv://aaronkthai:6dcWQ1MqE7gVuKJK@cluster0.ycxwxau.mongodb.net/
 TOKEN_SECRET=dewgang
 domain=http://localhost:3000
